--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -11,6 +11,8 @@
   height: 100vh;
   box-sizing: border-box;
   will-change: transform;
+  z-index: 5;
+  background-color: var(--backgroundColor);
 }
 .work-container {
   margin: auto;
