--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@
   --vh: 100vh;
   --vh: 100svh;
 }
+
 h1,
 h2,
 h3,
@@ -37,30 +38,37 @@ h5,
 h6 {
   font-family: "Geist", sans-serif;
 }
+
 body {
   overflow: hidden;
 }
+
 a {
   color: inherit;
   text-decoration: inherit;
 }
+
 a:hover {
   color: var(--accentColor);
 }
+
 main {
   opacity: 1;
   transition: 0.3s;
 }
+
 .main-active {
   opacity: 0;
   animation: fadeIn 1s 1;
   animation-fill-mode: forwards;
 }
+
 @keyframes fadeIn {
   100% {
     opacity: 1;
   }
 }
+
 body {
   margin: 0;
   height: auto;
@@ -71,6 +79,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
+
 .main-body {
   max-width: 100vw;
   overflow-x: hidden;
@@ -81,15 +90,18 @@ body {
   margin: auto;
   position: relative;
 }
+
 .container1 {
   width: var(--cWidth);
   height: var(--vh);
   margin: auto;
   position: relative;
 }
+
 .split-line {
   overflow: hidden;
 }
+
 .split-h2 {
   overflow: hidden;
   display: flex;
@@ -103,6 +115,8 @@ body {
   min-height: 100vh;
   margin: auto;
   padding: 100px 0;
+  background-color: #0e0b0f;
+  border-top: 1px solid rgba(255, 255, 255, 0.05);
   overflow: hidden;
 }
 
@@ -122,6 +136,7 @@ body {
     --cWidth: 94%;
   }
 }
+
 @media screen and (max-width: 900px) {
   .techstack h2 {
     font-size: 40px;
